--- a/2019_12_28/networking/android/app/src/main/AndroidManifest.xml
+++ b/2019_12_28/networking/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCef3IQrH9gc8IhpAHp_cF1uj2sQAGp5lQ"/>
     </application>
 
 </manifest>
