--- a/2019_12_28/networking/ios/Podfile
+++ b/2019_12_28/networking/ios/Podfile
@@ -34,6 +34,9 @@ target 'networking' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'networkingTests' do
     inherit! :search_paths
     # Pods for testing
